--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </header>
 
   <section id="about" class="about">
-    <img src="https://via.placeholder.com/160" alt="Profile" />
+    <img src="IMG_20250512_221258_267.webp" alt="Profile" />
     <h2>About Me</h2>
     <p>Hello! I'm <b>Kavinesh</b>, passionate about tech, AI, and building projects like RC Jet models and innovative IoT devices.</p>
   </section>
