--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
   <section id="contact" class="contact">
     <h2>Contact Me</h2>
-    <p>Email: <b>yourmail@example.com</b></p>
+    <p>Email: <b>cybercrux4@gmail.com</b></p>
     <button id="helloBtn">Say Hello</button>
   </section>
 
